bin_PROGRAMS = $(top_builddir)/AlignmentCalculator
__top_builddir__AlignmentCalculator_SOURCES = main.cpp matrix.cpp inputs.cpp pulses.cpp outputs.cpp nonadiabaticPropagator.cpp adiabaticPropagator.cpp molecules.cpp propagatorBase.cpp

# AM_CXXFLAGS=-I$(top_srcdir) -Wall
AM_CXXFLAGS=-I$(top_srcdir)
